--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -5,7 +5,7 @@ html(lang="ru")
   head
     meta(charset="UTF-8")
     meta(name="viewport", content="width=device-width, initial-scale=1.0, shrink-to-fit=no")
-    title Bootstrap-page
+    title CandyShop
     link(rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous")
   body
     header
@@ -29,58 +29,16 @@ html(lang="ru")
           li(data-target="#slides" data-slide-to="2")
         .carousel-inner
           .carousel-item.active
-            img.d-block.w-100(src="img/кроссовок2.jpg", alt="")
+            img.d-block.w-100(src="img/конфеты1.jpg", alt="")
             .carousel-caption
-              h1.display-5 Adidas
-              h3 Новинка
+              h1.display-5 Широкий ассортимент конфет
+              h3 Новинки
               button.btn.btn-outline-drk.btn-lg(type="button") Посмотреть
               button.btn.btn-warning.btn-lg(type="button") Купить
           .carousel-item
-            img.d-block.w-100(src="img/кроссовок1.jpg", alt="")
+            img.d-block.w-100(src="img/конфеты2.jpg", alt="")
           .carousel-item
-            img.d-block.w-100(src="img/кроссовок3.jpg", alt="")
-    .container-fluid
-      .row.jumbotron
-        .col-xs-12.col-sm-12.col-md-9.col-lg-9.col-xl-10
-          p.lead Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat perferendis iure mollitia voluptatibus incidunt. Hic quos ipsam libero, officiis dolores consequatur adipisci nulla? Odio consequuntur illo possimus distinctio repellendus reprehenderit.
-        .col-xs-12.col-sm-12.col-md-3.col-lg-3.col-xl-2
-          a(href="https://macgamez-download.com/2017/11/stikbold-a-dodgeball-adventure-macosx-activated-cracked-download/")
-            button.btn.btn-success.btn-lg(type="button") Читать далее
-    .container-fluid 
-      .row.text-center.alert
-        .col-12
-          h1.display-4 Новинки
-      br
-      table.table.table-sm.table-dark
-        thead
-          tr
-            th(scope="col") Бренд
-            th(scope="col") Модель
-            th(scope="col") Размеры
-            th(scope="col") Цена
-        tbody
-          tr.table-active 
-            td JORDAN
-            td 5 RETRO (DA1911-102)
-            td  US 8 US 8.5 US 10.5 US 11 US 12 US 12.5 US 13 US 14 US 15
-            td
-              span.badge.badge-danger 15 790 
-                i.glyphicon.glyphicon-ruble
-          tr.table-primary
-            td NIKE
-            td WMNS AIR MAX 90 (CW2654-700)
-            td US 6 US 6.5 US 7 US 7.5 US 8 US 8.5 US 9
-             td
-              span.badge.badge-primary 12 490
-                i.glyphicon.glyphicon-ruble
-          tr.table-info
-            td NIKE
-            td WMNS AIR FORCE 1 '07 (CT4328-100)
-            td US 6 US 7.5 US 8 US 8.5
-             td
-              span.badge.badge-success 8290
-                i.glyphicon.glyphicon-ruble
-            
+            img.d-block.w-100(src="img/конфеты3.jpg", alt="")        
     .container-fluid.padding
       ul.nav.nav-tabs(id="tab-example" role="tablist")
         li.nav-item
@@ -92,36 +50,140 @@ html(lang="ru")
 
       .tab-content(id="tab-content-example")
         .tab-pane.fade.show.active(id="first-tab-content" role="tabpanel" aria-labelledby="first-tab")
-          h3 Первый заголовок
+          h3 1 Загаловок
           p
             | Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
             | incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
             | nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
         .tab-pane.fade(id="second-tab-content" role="tabpanel" aria-labelledby="second-tab")
-          h3 Второй заголовок
+          h3 2 Заголовок
           p
             | Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
             | incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
             | nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
         .tab-pane.fade(id="third-tab-content" role="tabpanel" aria-labelledby="third-tab")
-          h3 Третий заголовок
+          h3 3 Заголовок
           p
             | Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
             | incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
             | nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+    .container-fluid
+      .row.jumbotron
+        .col-xs-12.col-sm-12.col-md-9.col-lg-9.col-xl-10
+          p.lead Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat perferendis iure mollitia voluptatibus incidunt. Hic quos ipsam libero, officiis dolores consequatur adipisci nulla? Odio consequuntur illo possimus distinctio repellendus reprehenderit.
+        .col-xs-12.col-sm-12.col-md-3.col-lg-3.col-xl-2
+          a(href="https://macgamez-download.com/2017/11/stikbold-a-dodgeball-adventure-macosx-activated-cracked-download/")
+            button.btn.btn-success.btn-lg(type="button") Читать далее
+    br
+    br
     .container-fluid.media-object
       .media
-        img.mr-3(src="img/gif_3.gif" alt="...")
+        img.mr-3(src="img/gif1.gif" alt="...")
         .media-body
             h5.mt-0 Медиа объект
             div.media.mt-3
-                img.mr-3(src="img/gif_1.gif" alt="...")
+                img.mr-3(src="img/gif2.gif" alt="...")
                 .media-body
                     h5.mt-0 Медиа объект
-    .container-fluid
+                     div.media.mt-3
+                      img.mr-3(src="img/gif3.gif" alt="...")
+      hr.my-4
+      .container-fluid.padding
+        .row.padding
+          .offset-lg-2.col-lg-4
+            h2 Информация про конфеты
+            p Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam numquam itaque provident quae, ipsa, deserunt, magnam eum tempora quos delectus nulla dolore sequi debitis enim nam minima similique? A, dolorum! 
+            br
+            p Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate fugiat ut minima sed ducimus? Expedita tempore excepturi voluptatem cumque maiores. Quo veniam laudantium recusandae quisquam nihil expedita ipsa deleniti atque.
+            br
+            p Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatibus facilis dolor cum ad harum ipsa deleniti magni placeat, odio quia, non autem distinctio! Iusto obcaecati eius tempore autem hic minus.
+            br
+            a.btn.btn-danger(href="https://www.appstorrent.ru/") Читать далее
+          .col-lg-6
+            br
+            img.img-fluid(src="img/конфетыинфа.jpg")
+      .container-fluid 
       .row.text-center.alert
         .col-12
-          h1.display-4 Создание сайтов
+          h1.display-4 Последние поступления
+      br
+      table.table.table-sm.table-dark
+        thead
+          tr
+            th(scope="col") Производитель
+            th(scope="col") Номенклатура
+            th(scope="col") Грамм
+            th(scope="col") Цена
+        tbody
+          tr.table-active 
+            td Roshen
+            td Елочка
+            td 100
+            td
+              span.badge.badge-danger 200
+                i.glyphicon.glyphicon-ruble
+          tr.table-primary
+            td Dove
+            td Белочка
+            td 200
+             td
+              span.badge.badge-primary 400
+                i.glyphicon.glyphicon-ruble
+          tr.table-info
+            td Baunty
+            td Райское наслаждение
+            td 120
+             td
+              span.badge.badge-success 300
+                i.glyphicon.glyphicon-ruble
+      figure
+        .fixed-wrap
+          #fixed
+      .text-center
+        button.btn.btn-success.text-center(type="button" data-toggle="collapse" data-target="#gifs" id="gifsBtn") Открыть блок
+      #gifs.collapse
+        .container-fluid.padding
+          .row.text-center
+            .col-sm-6.col-md-3
+              img.gif(src="img/gif1.gif", alt="")
+            .col-sm-6.col-md-3
+              img.gif(src="img/gif2.gif", alt="")
+            .col-sm-6.col-md-3
+              img.gif(src="img/gif3.gif", alt="")
+            .col-sm-6.col-md-3
+              img.gif(src="img/gif4.gif", alt="")
+      .container-fluid.padding
+        .row.alert.text-center
+          .col-12
+            h1.display-4 Сайты производителей
+            hr
+      .container-fluid.padding
+        .row.padding
+          .col-md-4
+            .card
+              img.card-img-top(src="img/roshen.png", alt="")
+              .card-body
+                h4.card-title Roshen
+                p.card-text Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur id corporis recusandae eum reprehenderit optio illum corrupti voluptates commodi laudantium. Vel ut facilis minus nam harum enim temporibus et labore?
+                a.btn.btn-warning(href="https://roshenstores.com/ru") Перейти
+          .col-md-4
+            .card
+              img.card-img-top(src="img/bounty.png", alt="")
+              .card-body
+                h4.card-title Bounty
+                p.card-text Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur id corporis recusandae eum reprehenderit optio illum corrupti voluptates commodi laudantium. Vel ut facilis minus nam harum enim temporibus et labore? Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor amet ab ipsa sapiente facere est consequuntur nobis aliquid totam quod animi, in saepe vero hic eaque ad possimus sequi asperiores? Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet sed, fugit, similique beatae quam vel distinctio est id eum dicta tenetur asperiores natus nam voluptatibus maiores assumenda hic minima quod. Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum assumenda illum libero, tempora, eaque ratione enim omnis illo non voluptate nesciunt repudianda.
+                a.btn.btn-warning(href="https://rus.mars.com/") Перейти
+          .col-md-4
+            .card
+              img.card-img-top(src="dove.png", alt="" width="100px")
+              .card-body
+                h4.card-title Dove
+                p.card-text Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur id corporis recusandae eum reprehenderit optio illum corrupti voluptates commodi laudantium. Vel ut facilis minus nam harum enim temporibus et labore?
+                a.btn.btn-warning(href="https://www.dove.com/ru/home.html") Перейти
+      .container-fluid
+      .row.text-center.alert
+        .col-12
+          h1.display-4 Технологии, использованные на сайте
         hr
         .col-12
           p.lead Lorem ipsum dolor, sit amet consectetur adipisicing elit. Architecto maxime suscipit quae saepe tempore velit id reiciendis nihil inventore illum veniam rem, debitis esse ipsa optio, vero enim porro sapiente?
@@ -139,70 +201,11 @@ html(lang="ru")
           i.fab.fa-css3
           h3 CSS3
           p Lorem ipsum, dolor sit amet consectetur adipisicing.
-      hr.my-4
-      .container-fluid.padding
-        .row.padding
-          .offset-lg-2.col-lg-4
-            h2 Что-то про кроссовки
-            p Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam numquam itaque provident quae, ipsa, deserunt, magnam eum tempora quos delectus nulla dolore sequi debitis enim nam minima similique? A, dolorum! 
-            br
-            p Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate fugiat ut minima sed ducimus? Expedita tempore excepturi voluptatem cumque maiores. Quo veniam laudantium recusandae quisquam nihil expedita ipsa deleniti atque.
-            br
-            p Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatibus facilis dolor cum ad harum ipsa deleniti magni placeat, odio quia, non autem distinctio! Iusto obcaecati eius tempore autem hic minus.
-            br
-            a.btn.btn-danger(href="#") Читать далее
-          .col-lg-6
-            br
-            img.img-fluid(src="", alt="")
-      figure
-        .fixed-wrap
-          #fixed
-      .text-center
-        button.btn.btn-success.text-center(type="button" data-toggle="collapse" data-target="#gifs" id="gifsBtn") Открыть блок
-      #gifs.collapse
-        .container-fluid.padding
-          .row.text-center
-            .col-sm-6.col-md-3
-              img.gif(src="img/gif_1.gif", alt="")
-            .col-sm-6.col-md-3
-              img.gif(src="img/gif_2.gif", alt="")
-            .col-sm-6.col-md-3
-              img.gif(src="img/gif_3.gif", alt="")
-            .col-sm-6.col-md-3
-              img.gif(src="img/gif_4.gif", alt="")
-      .container-fluid.padding
-        .row.alert.text-center
-          .col-12
-            h1.display-4 Бренды кроссовок
-            hr
-      .container-fluid.padding
-        .row.padding
-          .col-md-4
-            .card
-              img.card-img-top(src="https://i.pinimg.com/originals/ba/db/31/badb3138cf30ee6b3b2b05af5008e720.jpg", alt="")
-              .card-body
-                h4.card-title Nike
-                p.card-text Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur id corporis recusandae eum reprehenderit optio illum corrupti voluptates commodi laudantium. Vel ut facilis minus nam harum enim temporibus et labore?
-                a.btn.btn-warning(href="https://www.nike.com/ru/?cp=95815615801_search_|nike|373472226|23188722066|e|c|RU|pure|427740473663&gclsrc=aw.ds&ds_rl=1252249&gclid=EAIaIQobChMI-bqhhtah6QIVTZSyCh0bUwB_EAAYASAAEgLi9vD_BwE&gclsrc=aw.ds") Посмотреть
-          .col-md-4
-            .card
-              img.card-img-top(src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/20/Adidas_Logo.svg/1200px-Adidas_Logo.svg.png", alt="")
-              .card-body
-                h4.card-title Adidas
-                p.card-text Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur id corporis recusandae eum reprehenderit optio illum corrupti voluptates commodi laudantium. Vel ut facilis minus nam harum enim temporibus et labore?
-                a.btn.btn-warning(href="https://www.adidas.ru/?cm_mmc=AdieSEM_Google-_-adidas-Brand-B-Exact-Desktop-_-adidas_brand-_-adidas-_-dv%3AeCom-_-cn%3Aadidas-Brand-B-Exact-Desktop-_-pc%3AGoogle&cm_mmc1=&cm_mmc2=PPC-B-Multiple-Multiple-Exact-RU-CIS-eCom-Paid_Search&gclid=EAIaIQobChMI3LfU_9Wh6QIVgsYYCh19aQFqEAAYASAAEgKaaPD_BwE") Посмотреть
-          .col-md-4
-            .card
-              img.card-img-top(src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcSIV1IMwELvsnKe3WqpnocsLWxQaifLvOHmJpsh5yd8NaEPZTbI&usqp=CAU", alt="")
-              .card-body
-                h4.card-title Reebok
-                p.card-text Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur id corporis recusandae eum reprehenderit optio illum corrupti voluptates commodi laudantium. Vel ut facilis minus nam harum enim temporibus et labore?
-                a.btn.btn-warning(href="https://www.reebok.ru/sport?cm_mmc=ReebokSEM_Google-_-brand-_-Reebok-BMM-desktop-_-reebok-_-dv%3AeCom-_-cn%3Abrand-_-pc%3AGoogle&cm_mmc1=RU&cm_mmc2=PPC-TM-Allproducts-None-BMM-RU-CIS-eCom-Paid_Search&gclid=EAIaIQobChMIxYCEj9ah6QIVxOAYCh0BtQhJEAAYASAAEgIUVPD_BwE") Посмотреть
       .footer.container-fluid
         .container-fluid
           .row.padding.text-center
             .col-12
-              h2 Наши контакты
+              h2 Связь
             .col-12.social.padding
               a(href="https://www.instagram.com/")
                 i.fab.fa-instagram
