--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,5 +1,4 @@
 @import "fonts.scss";
-@import "colors.scss";
 @import "~material-design-icons/iconfont/material-icons.css";
 
 @import "~bootstrap/scss/bootstrap";
@@ -51,15 +50,15 @@ body {
 }
 
 .fa-html5 {
-  color: #e54d26;
+  color: red;
 }
 
 .fa-bold {
-  color: #563d7c;
+  color: purple;
 }
 
 .fa-css3 {
-  color: #2163af;
+  color: blue;
 }
 
 .fa-html5,
@@ -75,7 +74,7 @@ body {
   border-bottom: 4px solid #f0f0f0;
   background: url("../img/bg.jpg") no-repeat center center fixed;
   background-blend-mode: multiply;
-  background-color: red;
+  background-color: pink;
   background-size: cover;
   -o-background-size: cover;
   -moz-background-size: cover;
